--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+#ignore config.py
+EmployeeSQL/config.py
+
 # User-specific files
 *.suo
 *.user
